--- a/admin/src/pages/login/login.css
+++ b/admin/src/pages/login/login.css
@@ -7,12 +7,100 @@
   justify-content: center;
 }
 
+.loadingContainer {
+  display: flex;
+  width: 100%;
+  background-color: transparent;
+  border: 1px solid #c9366f;
+  border-radius: 5px;
+  transition: all 0.5s ease;
+  cursor: not-allowed;
+  align-items: center;
+  justify-content: center;
+}
+
+.buttonContainer {
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+  display: flex;
+}
+
+.wrapper {
+  padding: 70px;
+  background-color: white;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  border: 0.1px solid lightgray;
+  padding: 20px 80px;
+  width: 100%;
+  border-radius: 10px;
+}
+
 .input {
-  padding: 10px;
-  margin-bottom: 20px;
+  flex: 1;
+  min-width: 40%;
+  margin: 10px 0px;
+  padding: 15px;
+  font-size: 18px;
+}
+
+.passwordContainer {
+  position: relative;
+  margin-top: 10px;
+  display: flex;
+}
+
+.password {
+  padding: 15px;
+  flex: 1;
+  min-width: 40%;
+  font-size: 18px;
+  display: inline-block;
+  position: relative;
 }
 
 .button {
-  padding: 10px;
-  width: 100px;
+  width: 100%;
+  font-weight: 700;
+  background-color: transparent;
+  text-transform: uppercase;
+  color: #0275d8;
+  padding: 18px 30px;
+  border: 1px solid #c9366f;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.5s ease;
+}
+
+.button:hover {
+  background-color: #c9366f;
+  color: white;
+}
+
+.button:disabled {
+  color: gray;
+  cursor: not-allowed;
+}
+
+.error {
+  color: red;
+}
+
+.title {
+  font-size: 48px;
+}
+
+.visibility {
+  cursor: pointer;
+  position: absolute;
+  top: 15px;
+  right: 10px;
+  width: 24px;
 }
